# aardvark.base

./: .editorconfig  .gitattributes  .gitignore  .travis.yml  AGENTS.md  LICENSE  PACKAGES.md  README.md  RELEASE_NOTES.md  appveyor.yml  build.cmd  build.fsx  build.sh  check-docs.cmd  check-docs.sh  deploy.targets  generate.cmd  generate.sh  global.json  install.bat  install.sh  paket.dependencies  test.cmd  test.sh
.claude/: CLAUDE.md
.config/: dotnet-tools.json
.github/: global.json
.github/workflows/: build.yml  docs-check.yml  dotnetcore.yml  linux.yml  mac.yml  publish.yml  test.yml  windows.yml
ai/: ALGORITHMS.md  COLLECTIONS.md  DOC_ACCURACY_AUDIT.md  FSHARP_INTEROP.md  INCREMENTAL.md  PIXIMAGE.md  PRIMITIVE_TYPES.md  README.md  RECIPE_AI_FRIENDLINESS.md  SEMANTICS_GEOMETRY_CORE.md  SEMANTICS_LINEAR_ALGEBRA.md  SERIALIZATION.md  SYMBOL_INDEX.md  TENSORS.md  UTILITIES.md
docs/: CONTRIBUTING.md  INTEROP.md  Readme.html  Readme.md  TROUBLESHOOTING.md  Test.fsx  Test.html  index.html  template.html
docs/api/: Readme.html  Readme.md
docs/templates/: template.cshtml
help/: ag.md  index.md  test.fsx
help/templates/: template.cshtml
src/: Aardvark.NonWindows.sln  Aardvark.NonWindows.slnf  Aardvark.sln  nuget.config
src/Aardvark.Base.Algodat/: Aardvark.Base.Algodat.csproj  AdaBoost.cs  MinimumSpanningTree.cs  ShortestPath.cs
src/Aardvark.Geometry/: Bvh.fs  (+12 more)
src/Tests/Aardvark.Base.TestLib/testlib/: CMakeLists.txt  build.cmd  build.sh  testliba.cpp  testliba.h  testlibb.cpp  testlibb.h  testlibc.cpp  testlibc.h
tools/: Verify-ChangedLineCoverage.ps1
(+3262 files in other folders)
