cmake_minimum_required(VERSION 3.15)

project(testlib LANGUAGES CXX)
if(WIN32)
    set(OS windows)
    set(ARCH AMD64)
    set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
elseif(APPLE)
    set(OS mac)
    execute_process(COMMAND uname -m OUTPUT_VARIABLE ARCH)
    string(REGEX REPLACE "\n$" "" ARCH "${ARCH}")
    string(REGEX REPLACE "x86_64" "AMD64" ARCH "${ARCH}")
elseif(UNIX AND NOT APPLE)
    set(OS linux)
    execute_process(COMMAND uname -m OUTPUT_VARIABLE ARCH)
    string(REGEX REPLACE "\n$" "" ARCH "${ARCH}")
    string(REGEX REPLACE "x86_64" "AMD64" ARCH "${ARCH}")
else()
    set(OS unknown)
    set(ARCH AMD64)
endif(WIN32)

add_library(testlibc SHARED testlibc.cpp)
add_library(testlibb SHARED testlibb.cpp)
add_library(testliba SHARED testliba.cpp)
target_link_libraries(testlibb PUBLIC testlibc)
target_link_libraries(testliba PUBLIC testlibb)

set(CMAKE_INSTALL_PREFIX "${CMAKE_CURRENT_SOURCE_DIR}/../../../../lib/Native/Aardvark.Base.TestLib/")
install(TARGETS testliba testlibb testlibc DESTINATION ${OS}/${ARCH})